--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -211,6 +211,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#col2im 구현 - 정의\n",
+    "def col2im(cols, img_shape, flt_h, flt_w, out_h, out_w, stride, pad):\n",
+    "    n_bt, n_ch, img_h, img_w = img_shape\n",
+    "    \n",
+    "    cols = cols.reshape(n_ch, flt_h, flt_w, n_bt, out_h,\n",
+    "                        out_w).transpose(3, 0, 1, 2, 4, 5)\n",
+    "    images = np.zeros((n_bt, n_ch, img_h+2*pad+stride-1, img_w+2*pad+stride-1))\n",
+    "    \n",
+    "    for h in range(flt_h):\n",
+    "        h_lim = h + stride*out_h\n",
+    "        for w in range(flt_w):\n",
+    "            w_lim = w + stride*out_w\n",
+    "            images[:, :, h:h_lim:stride,\n",
+    "                   w:w_lim:stride] += cols[:, :, h, w, :, :]\n",
+    "            \n",
+    "    return images[:, :, pad:img_h+pad, pad:img_w+pad]\n",
+    "                    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[1. 2. 1.]\n",
+      "   [2. 4. 2.]\n",
+      "   [1. 2. 1.]]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "cols = np.ones((4,4))\n",
+    "img_shape = (1, 1, 3, 3)\n",
+    "images = col2im(cols, img_shape, 2, 2, 2, 2, 1, 0)\n",
+    "print(images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#컨볼루션층 구현 - ConvLayer 클래스 생성자\n",
+    "class ConvLayer:\n",
+    "    \n",
+    "    #x_ch: 입력 채널 수, x_h:입력 이미지 높이, x_w:입력 이미지 너비\n",
+    "    #n_flt:필터 수, flt_h:필터 높이, flt_w:필터 너비\n",
+    "    #stride:스트라이드 너비, pad:패딩 너비\n",
+    "    \n",
+    "    def __init__(self, x_ch, x_h, x_w, n_flt, flt_h, flt_w, stride, pad):\n",
+    "        \n",
+    "        #파라미터 정리\n",
+    "        self.params = (x_ch, x_h, x_w, n_flt, flt_h, flt_w, stride, pad)\n",
+    "        \n",
+    "        #필터와 편향 초깃값\n",
+    "        self.w = wb_width * np.random.randn(n_flt, x_ch, flt_h, flt_w)\n",
+    "        self.b = wb_width * np.random.randn(1, n_flt)\n",
+    "        \n",
+    "        #출력 이미지 크기\n",
+    "        self.y_ch = n_flt #출력 채널수\n",
+    "        self.y_h = (x_h - flt_h + 2*pad) // stride + 1 #출력 높이\n",
+    "        slef.y_w = (x_w - flt_w + 2*pad) // stride + 1 #출력 너비\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
