--- a/ML.ipynb
+++ b/ML.ipynb
@@ -662,7 +662,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd07d428a60>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc5dfc29b80>"
       ]
      },
      "execution_count": 13,
@@ -694,7 +694,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd093fdafd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc5f7c73cd0>"
       ]
      },
      "execution_count": 14,
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1265,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
        "19252      1405.0         3.1662       <1H OCEAN  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
        "19252      3468.0      1405.0         3.1662       <1H OCEAN  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1540,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1549,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1558,7 @@
        "SimpleImputer(strategy='median')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1569,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1579,7 @@
        "        408.    ,    3.5409])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1600,7 @@
        "        408.    ,    3.5409])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1740,7 +1740,7 @@
        "19252      3468.0      1405.0         3.1662  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1751,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1887,7 +1887,7 @@
        "6569           INLAND"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1929,7 +1929,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1942,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1952,7 @@
        "       dtype=object)]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1963,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1976,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1991,7 +1991,7 @@
        "       [0., 0., 0., 1., 0.]])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2004,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2014,7 @@
        "       dtype=object)]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2025,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2037,7 +2037,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2048,7 +2048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2074,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2209,7 +2209,7 @@
        "3555                   3.04785  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2224,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2240,7 +2240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2252,7 +2252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2268,7 +2268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2289,7 +2289,7 @@
        "         1.        ,  0.        ]])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2300,12 +2300,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#모델 훈련\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "lin_reg = LinearRegression()\n",
+    "lin_reg.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions: [210644.60459286 317768.80697211 210956.43331178  59218.98886849\n",
+      " 189747.55849879]\n"
+     ]
+    }
+   ],
+   "source": [
+    "some_data = housing.iloc[:5]\n",
+    "some_labels = housing_labels.iloc[:5]\n",
+    "some_data_prepared = full_pipeline.transform(some_data)\n",
+    "\n",
+    "print(\"Predictions:\", lin_reg.predict(some_data_prepared))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels: [286600.0, 340600.0, 196900.0, 46300.0, 254500.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Labels:\", list(some_labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68628.19819848923"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "housing_predictions = lin_reg.predict(housing_prepared)\n",
+    "lin_mse = mean_squared_error(housing_labels, housing_predictions)\n",
+    "lin_rmse = np.sqrt(lin_mse)\n",
+    "lin_rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.15604281,  0.77194962,  0.74333089, -0.49323393, -0.44543821,\n",
+       "        -0.63621141, -0.42069842, -0.61493744, -0.31205452, -0.08649871,\n",
+       "         0.15531753,  1.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ],\n",
+       "       [-1.17602483,  0.6596948 , -1.1653172 , -0.90896655, -1.0369278 ,\n",
+       "        -0.99833135, -1.02222705,  1.33645936,  0.21768338, -0.03353391,\n",
+       "        -0.83628902,  1.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ],\n",
+       "       [ 1.18684903, -1.34218285,  0.18664186, -0.31365989, -0.15334458,\n",
+       "        -0.43363936, -0.0933178 , -0.5320456 , -0.46531516, -0.09240499,\n",
+       "         0.4222004 ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         1.        ],\n",
+       "       [-0.01706767,  0.31357576, -0.29052016, -0.36276217, -0.39675594,\n",
+       "         0.03604096, -0.38343559, -1.04556555, -0.07966124,  0.08973561,\n",
+       "        -0.19645314,  0.        ,  1.        ,  0.        ,  0.        ,\n",
+       "         0.        ],\n",
+       "       [ 0.49247384, -0.65929936, -0.92673619,  1.85619316,  2.41221109,\n",
+       "         2.72415407,  2.57097492, -0.44143679, -0.35783383, -0.00419445,\n",
+       "         0.2699277 ,  1.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ]])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "some_data_prepared"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeRegressor(random_state=42)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "tree_reg = DecisionTreeRegressor(random_state=42)\n",
+    "tree_reg.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_predictions = tree_reg.predict(housing_prepared)\n",
+    "tree_mse = mean_squared_error(housing_labels, housing_predictions)\n",
+    "tree_rmse = np.sqrt(tree_mse)\n",
+    "tree_rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#모델 훈련"
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "scores = cross_val_score(tree_reg, housing_prepared, housing_labels,\n",
+    "                        scoring=\"neg_mean_squared_error\", cv=10)\n",
+    "\n",
+    "tree_rmse_scores = np.sqrt(-scores)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores: [70194.33680785 66855.16363941 72432.58244769 70758.73896782\n",
+      " 71115.88230639 75585.14172901 70262.86139133 70273.6325285\n",
+      " 75366.87952553 71231.65726027]\n",
+      "Mean: 71407.68766037929\n",
+      "Standard deviation: 2439.4345041191004\n"
+     ]
+    }
+   ],
+   "source": [
+    "def display_scores(scores):\n",
+    "    print(\"Scores:\", scores)\n",
+    "    print(\"Mean:\", scores.mean())\n",
+    "    print(\"Standard deviation:\", scores.std())\n",
+    "    \n",
+    "display_scores(tree_rmse_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores: [66782.73843989 66960.118071   70347.95244419 74739.57052552\n",
+      " 68031.13388938 71193.84183426 64969.63056405 68281.61137997\n",
+      " 71552.91566558 67665.10082067]\n",
+      "Mean: 69052.46136345083\n",
+      "Standard deviation: 2731.6740017983493\n"
+     ]
+    }
+   ],
+   "source": [
+    "lin_scores = cross_val_score(lin_reg, housing_prepared, housing_labels,\n",
+    "                            scoring=\"neg_mean_squared_error\", cv=10)\n",
+    "lin_rmse_scores = np.sqrt(-lin_scores)\n",
+    "display_scores(lin_rmse_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
